--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a Local Japanese Oden Restaurant</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Life Has No Meaning... And That’s Where Life Begins</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>A Guide to The Essence of You | Eckhart Tolle on Awakening Through Life's Challenges (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Real Change - Growing Past Your Inner Boundaries</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 23.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -453,7 +453,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 21.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 23.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5193,7 +5193,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 21.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Life Has No Meaning... And That’s Where Life Begins</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>A Guide to The Essence of You | Eckhart Tolle on Awakening Through Life's Challenges (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7293,7 +7293,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Real Change - Growing Past Your Inner Boundaries</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a Local Japanese Oden Restaurant</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
