--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The Fear of Letting Go — Why Traders Bank Too Soon</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">11 minutes ago</div>
+                        <div class="date">32 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Can You Escape Karma’s Effects? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Science of Mantras | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Set Fire to Yourself! | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Embracing Impermanence, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -464,7 +464,7 @@
                     <div class="video-info">
                         <h3>The number 1 problem with Day Trading strategies...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -871,7 +871,7 @@
                     <div class="video-info">
                         <h3>Short Term Momentum Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>The Fear of Letting Go — Why Traders Bank Too Soon</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">11 minutes ago</div>
+                            <div class="date">32 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5193,7 +5193,7 @@
                         <div class="video-info">
                             <h3>The number 1 problem with Day Trading strategies...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5347,7 +5347,7 @@
                         <div class="video-info">
                             <h3>Short Term Momentum Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Can You Escape Karma’s Effects? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Science of Mantras | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Set Fire to Yourself! | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>Embracing Impermanence, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
