--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>5 Proven Indicators For Short Term Trading (backtested)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">25 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>5 Game-Changers for Bharat’s Future | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">32 minutes ago</div>
+                        <div class="date">53 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>The Fear of Letting Go — Why Traders Bank Too Soon</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - In the Image of God</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>6 Tiny Habits from Japanese Culture to Become More Disciplined</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a Local Japanese Oden Restaurant</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Embracing Impermanence, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Life Has No Meaning... And That’s Where Life Begins</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>A Guide to The Essence of You | Eckhart Tolle on Awakening Through Life's Challenges (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -354,7 +354,7 @@
                     <div class="video-info">
                         <h3>Pizza testing #pizza #pizzalover #food #streetfood #pizzatime</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>5 Proven Indicators For Short Term Trading (backtested)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">25 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>The Fear of Letting Go — Why Traders Bank Too Soon</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>5 Game-Changers for Bharat’s Future | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">32 minutes ago</div>
+                            <div class="date">53 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - In the Image of God</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7304,7 +7304,7 @@
                         <div class="video-info">
                             <h3>Embracing Impermanence, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7315,7 +7315,7 @@
                         <div class="video-info">
                             <h3>Life Has No Meaning... And That’s Where Life Begins</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7326,7 +7326,7 @@
                         <div class="video-info">
                             <h3>A Guide to The Essence of You | Eckhart Tolle on Awakening Through Life's Challenges (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8234,7 +8234,7 @@
                         <div class="video-info">
                             <h3>6 Tiny Habits from Japanese Culture to Become More Disciplined</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>Pizza testing #pizza #pizzalover #food #streetfood #pizzatime</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a Local Japanese Oden Restaurant</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
